--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Страница о взгляде на перфекционизм в работе и учёбе.">
 
-  <link rel="icon" href="">
+  <meta property="og:title" content="Надо сделать идеально">
+  <meta property="og:url" content="http://127.0.0.1:5500/index.html">
+  <meta property="og:image" content="./images/og.png">
+  <meta property="twitter:card" content="./images/poster.png">
+
+  <link rel="stylesheet" href="./fonts/fonts.css">
+  <link rel="stylesheet" href="./styles/style.css">
+
+  <link rel="icon" href="./images/icon.ico">
+  <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
+
   <title>Надо сделать идеально</title>
 </head>
 <body>
-  <h1>Надо сделать идеально</h1>
-  <video></video>
+  <h1 class="title">
+    Надо сделать идеально
+  </h1>
+  <video class="video" autoplay muted loop poster="./images/poster.png">
+    <source src="./video/cover-video.mp4" type="video/mp4">
+  </video>
 </body>
 </html>
