--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="./images/og.png">
   <meta property="twitter:card" content="./images/poster.png">
 
-  <link rel="stylesheet" href="./fonts/fonts.css">
+  <link rel="stylesheet" href="./fonts/font.css">
   <link rel="stylesheet" href="./styles/style.css">
 
   <link rel="icon" href="./images/icon.ico">
