--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
   <title>Надо сделать идеально</title>
 </head>
 <body>
-  <h1 class="title">
-    Надо сделать идеально
-  </h1>
   <video class="video" autoplay muted loop poster="./images/poster.png">
     <source src="./video/cover-video.mp4" type="video/mp4">
   </video>
+  <h1 class="title">Надо сделать идеально</h1>
 </body>
 </html>
