--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <meta property="og:title" content="Надо сделать идеально">
   <meta property="og:url" content="http://127.0.0.1:5500/index.html">
   <meta property="og:image" content="./images/og.png">
-  <meta propety="og:description" content="Страница о взгляде на перфекционизм в работе и учёбе.">
+  <meta property="og:description" content="Страница о взгляде на перфекционизм в работе и учёбе.">
   <meta property="twitter:card" content="./images/poster.png">
 
   <link rel="stylesheet" href="./fonts/font.css">
   <link rel="stylesheet" href="./styles/style.css">
 
   <link rel="icon" href="./images/icon.ico" sizes="any">
-  <link rel="icon" href="./images/icon.svg" sizes="image/svg+xml">
+  <link rel="icon" href="./images/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
 
   <title>Надо сделать идеально</title>
